--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Happy Holi 2025</title>
+  <title>Developergtm Happy Holi 2024</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
   <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
           <a class="navbar-brand text-white" href="#">
-           <div class="log">Happy Holi </div>
+           <div class="log">Happy Holi By Developergtm</div>
           </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" >
         <span class="navbar-toggler-icon"></span>
@@ -50,12 +49,16 @@
 
     <div class="myinfo">
       <h1 class="holi">Hey there!</h1>
-      <h1>i am Rakesh</h1>
+      <h1>i am Goutam</h1>
           <p>Wishing you and your loved ones a very colourful Holi<br>May you forget all your worries and enjoy this day to the fullest.<br> <h2 class="hue">Happy Holi!</h2></p>
+
+              <a href="#" class="btn btn-danger mr-3 hue">contact</a>
+              <a href="#" class="btn btn-light">Login</a>
       </div>
 
       <video autoplay loop play-inline muted  >
           <source src="CWS.mp4">
+              video is not load
           </video>
 
   
